--- a/config/config.json
+++ b/config/config.json
@@ -13,7 +13,7 @@
 
     "define":{
       "timestamps":true,
-      "underscored": true
+      "underscored": false
     },
     "logging": true
   },
