--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "GPL-3.0",
   "dependencies": {
     "commander": "^2.18.0",
+    "decamelize": "^2.0.0",
     "express": "^4.16.3",
     "inquirer": "^6.2.0",
     "mysql2": "^1.6.1",
